--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "jquery": "^3.5.1",
     "middleware": "^1.0.0",
     "react": "^17.0.1",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
