--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "http://SaHaRzZz.github.io/ShoppingListReact",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.13",
@@ -16,7 +17,6 @@
     "jquery": "^3.5.1",
     "middleware": "^1.0.0",
     "react": "^17.0.1",
-    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
