--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^4.5.3",
     "gh-pages": "^3.1.0",
     "jquery": "^3.5.1",
+    "js-base64": "^3.6.0",
     "middleware": "^1.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
