--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "buildtestsl",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://SaHaRzZz.github.io/ShoppingListReact",
+  "homepage": "http://saharzzz.github.io/shoppinglistreact",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
